# HelloCMake

./: CMakeLists.txt  HelloCMake.cpp  HelloCMake.h
utils/: calc.cpp  calc.h
